--- a/package.json
+++ b/package.json
@@ -9,9 +9,39 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.73",
+    "@ai-sdk/xai": "^3.0.47",
+    "@base-ui/react": "^1.1.0",
+    "@openrouter/ai-sdk-provider": "^2.1.1",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@rive-app/react-webgl2": "^4.26.2",
+    "@streamdown/cjk": "^1.0.1",
+    "@streamdown/code": "^1.0.1",
+    "@streamdown/math": "^1.0.1",
+    "@streamdown/mermaid": "^1.0.1",
+    "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.71",
+    "ansi-to-react": "^6.2.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.563.0",
+    "media-chrome": "^4.17.2",
+    "motion": "^12.31.1",
+    "nanoid": "^5.1.6",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-jsx-parser": "^2.4.1",
+    "shadcn": "^3.8.3",
+    "shiki": "^3.22.0",
+    "streamdown": "^2.1.0",
+    "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "tw-animate-css": "^1.4.0",
+    "use-stick-to-bottom": "^1.1.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
